wui fix teacher feedback not wrapping, and preserve white spaces

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -3074,7 +3074,7 @@ ez-feedback pre {
 /*ez-assessment*/ pre.feedback {
     padding: 1rem;
     font-size: 1.4rem;
-    white-space: normal;
+    white-space: pre-wrap;
     overflow: auto;
 }
 
